[package]
name = "rfind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ['cargo'] }
regex = "1.10.3"
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.13"
